fixed some alignment issues, broke others...

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .panel-body{
-    height: 100%
+    height: 100%;
+    padding-bottom: 55px;
 }
-
 .panel{
     overflow: hidden;
 }
@@ -30,8 +30,15 @@ tr{
 .table-responsive>.table>tfoot>tr>td {
     white-space: nowrap;
 }
+.container{
+    display: table;
+}
+.column{
+    display: table-cell;
+    float: left;
+}
 
-html, body, .container{
+html body .container {
     height: 100%;
 }
 /*line graph - container size */
